@@ -4,6 +4,7 @@ Changelog
 2019.4.0rc6 (unreleased)
 ------------------------
 
+- Fix unicode error in @listing endpoint filters. [lgraf]
 - Add main dossier count to contentstats. [njohner]
 
 
